<resources>
    <string name="app_name">Mamin ručak</string>
    <string name="large_text">
    </string>
    <string name="action_settings">Settings</string>
    <string name="load_videos">Load Videos</string>
    <string name="press_the_button_to_load_all_videos">Press the button to load all videos.</string>
    <string name="random_text">RANDOM</string>
    <string name="btn_add_day_text">+</string>
    <string name="btn_calendar_text">🗓️</string>
    <string name="btn_minus_text">-</string>
    <string name="btn_table_text">📜</string>
    <string name="btn_add_text">+</string>
    <string name="txt_jelo_text">Unos jela ili priloga</string>
    <string name="text_plain_ime">Ime hrane</string>
    <string name="btn_provjeri_text">PROVJERI SLIČNE REZULTATE</string>
    <string name="text_slicnost">Tu će pisati ako postoji slicna ili ista hrana u bazi podataka.</string>
    <string name="btn_dodaj_u_json">DODAJ</string>
    <string name="btn_provjeri2_text">PROVJERI DA LI JE NAĐEN UNOS</string>
    <string name="text_slicnost2_text">Tu će pisati ako postoji slicna ili ista hrana u bazi podataka.</string>
    <string name="btn_izbrisi_text">IZBRIŠI</string>
    <string name="btnTablicaDodaj_text">+</string>
    <string name="btnTablicaTjedana_text">📜</string>
    <string name="txt_naslov_text">Tablica</string>
</resources>