<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical"
    android:weightSum="100">

    <!-- Top section (15% weight) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="15"
        android:layout_height="0dp"
        android:background="@color/background_dark"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ScrollingActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            tools:layout_editor_absoluteX="3dp">

            <TextView
                android:id="@+id/txt_naslov"
                android:layout_width="300dp"
                android:layout_height="63dp"
                android:background="@drawable/roundedcard"
                android:gravity="center"
                android:text="@string/txt_naslov_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.692"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="26dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <!-- Middle section (75% weight) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="75"
        android:layout_height="0dp"
        android:background="@color/background_dark"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ScrollingActivity">

        <!-- Nested container with weightSum -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_dark"
            android:orientation="vertical"
            android:weightSum="100">

            <!-- First row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="14"
                android:layout_height="0dp"
                android:background="@color/background_dark"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                tools:context=".ScrollingActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_pon"
                        android:layout_width="252dp"
                        android:layout_height="60dp"
                        android:background="@drawable/roundedcard"
                        android:gravity="center"
                        android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.692" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <!-- Second row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="14"
                android:layout_height="0dp"
                android:background="@color/background_dark"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                tools:context=".ScrollingActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_uto"
                        android:layout_width="252dp"
                        android:layout_height="60dp"
                        android:background="@drawable/roundedcard"
                        android:gravity="center"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.692" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <!-- Third row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="14"
                android:layout_height="0dp"
                android:background="@color/background_dark"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                tools:context=".ScrollingActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_sri"
                        android:layout_width="252dp"
                        android:layout_height="60dp"
                        android:background="@drawable/roundedcard"
                        android:gravity="center"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.692" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <!-- Fourth row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="14"
                android:layout_height="0dp"
                android:background="@color/background_dark"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                tools:context=".ScrollingActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_cet"
                        android:layout_width="252dp"
                        android:layout_height="60dp"
                        android:background="@drawable/roundedcard"
                        android:gravity="center"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.692" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <!-- Fifth row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="14"
                android:layout_height="0dp"
                android:background="@color/background_dark"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                tools:context=".ScrollingActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_pet"
                        android:layout_width="252dp"
                        android:layout_height="60dp"
                        android:background="@drawable/roundedcard"
                        android:gravity="center"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.692" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="14"
                android:layout_height="0dp"
                android:background="@color/background_dark"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                tools:context=".ScrollingActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_sub"
                        android:layout_width="252dp"
                        android:layout_height="60dp"
                        android:background="@drawable/roundedcard"
                        android:gravity="center"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.692" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <!-- Sixth row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="14"
                android:layout_height="0dp"
                android:background="@color/background_dark"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                tools:context=".ScrollingActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_ned"
                        android:layout_width="252dp"
                        android:layout_height="60dp"
                        android:background="@drawable/roundedcard"
                        android:gravity="center"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.692" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Bottom section (10% weight) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp"
        android:background="@color/background_dark"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ScrollingActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="3dp">

            <Button
                android:id="@+id/btn_back3"
                android:layout_width="58dp"
                android:layout_height="53dp"
                android:background="@drawable/backimage"
                android:backgroundTint="@color/button_tint"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.881"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnTablicaDodaj"
                android:layout_width="72dp"
                android:layout_height="69dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@color/button_tint"
                android:text="@string/btnTablicaDodaj_text"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.149"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/btnTablicaTjedana"
                android:layout_width="72dp"
                android:layout_height="69dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@color/button_tint"
                android:text="@string/btnTablicaTjedana_text"
                android:textSize="34sp"
                app:layout_constraintHorizontal_bias="0.53"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
